# mlir-toy

./: .gitignore  CMakeLists.txt  README.md
Ch1/: CMakeLists.txt  toyc.cpp
Ch1/include/toy/: Parser.h
Ch2/: CMakeLists.txt  toyc.cpp
Ch2/include/toy/: CMakeLists.txt  Dialect.h  MLIRGen.h  Ops.td  Parser.h
Ch2/mlir/: Dialect.cpp  MLIRGen.cpp
Ch3/: CMakeLists.txt  toyc.cpp
Ch3/include/toy/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  Ops.td  Parser.h
Ch3/mlir/: Dialect.cpp  ToyCombine.cpp
Ch3/parser/: AST.cpp
Ch4/: CMakeLists.txt  toyc.cpp
Ch4/include/toy/: CMakeLists.txt  Dialect.h  Ops.td  Passes.h  ShapeInferenceInterface.td
Ch4/mlir/: Dialect.cpp  ShapeInferencePass.cpp
Ch5/: CMakeLists.txt  toyc.cpp
Ch5/include/toy/: AST.h  CMakeLists.txt  Dialect.h  MLIRGen.h  Passes.h  ShapeInferenceInterface.h
Ch5/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  MLIRGen.cpp  ToyCombine.td
Ch5/parser/: AST.cpp
Ch6/: CMakeLists.txt  toyc.cpp
Ch6/include/toy/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  MLIRGen.h  Ops.td  Parser.h  Passes.h  ShapeInferenceInterface.h
Ch6/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  ShapeInferencePass.cpp  ToyCombine.cpp  ToyCombine.td
Ch6/parser/: AST.cpp
Ch7/: CMakeLists.txt  toyc.cpp
Ch7/include/toy/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  Ops.td  Parser.h  ShapeInferenceInterface.td
Ch7/mlir/: Dialect.cpp  MLIRGen.cpp  ToyCombine.cpp
Ch7/parser/: AST.cpp
test/: a.toy
